# ChangeLog for media-libs/openal
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.69 2006/10/04 12:19:41 wolf31o2 Exp $

  04 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -files/0.0.8/000_all_alsa_backend_fix.patch,
  -files/0.0.8/001_all_rtprio.patch, openal-0.0.8-r1.ebuild:
  Remove bad patches and add EPATCH_SUFFIX.

  29 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/0.0.8/003_all_mmx.patch:
  Added patch for MMX and closing bug #145245.

*openal-0.0.8-r1 (29 Sep 2006)

  29 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/0.0.8/000_all_alsa_backend_fix.patch,
  +files/0.0.8/001_all_rtprio.patch, +files/0.0.8/002_all_alc_context.patch,
  +files/0.0.8/002_all_alsa_default.patch, +openal-0.0.8-r1.ebuild:
  Revision bump to add some patches from the openal-devel mailing list.
  Hopefully, these will resolve the few openal segfault bugs that are open, as
  well as improve the latency of openal on Gentoo.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> openal-0.0.8.ebuild:
  Added ~mips to KEYWORDS.

  09 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -files/openal-20040817-alsa_capture.diff,
  -files/openal-20040817-destdir.patch,
  -files/openal-20050504-alsa_capture.patch,
  -files/openal-20050504-alsa_dmix.patch,
  -files/openal-20050504-destdir.patch,
  -files/openal-20051024-alsa_dmix.patch,
  -files/openal-20051024-amd64-configure.patch, -openal-20050504-r1.ebuild,
  -openal-20050504-r2.ebuild, -openal-20051024.ebuild:
  Removing the older CVS snapshot ebuilds in favor of the released 0.0.8 version.

  02 Aug 2006; Thomas Cort <tcort@gentoo.org> openal-0.0.8.ebuild:
  Stable on alpha wrt Bug #133501.

  21 Jul 2006; Aron Griffis <agriffis@gentoo.org> openal-0.0.8.ebuild:
  Mark 0.0.8 stable on ia64. #133501

  16 Jul 2006; Jason Wever <weeve@gentoo.org> openal-0.0.8.ebuild:
  Stable on SPARC wrt bug #133501.
