@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/openal
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.69 2006/10/04 12:19:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.70 2006/10/13 16:32:28 wolf31o2 Exp $
+
+  13 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  openal-0.0.8-r1.ebuild:
+  Fix the broken openal.pc that is installed. Thanks to Paul Bredbury
+  <brebs@sent.com> for the patch. Closing bug #150872.
 
   04 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   -files/0.0.8/000_all_alsa_backend_fix.patch,
